--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li onclick="showScene(1)">Art Information</li>
             <li onclick="showScene(2)">Backstory</li>
             <li onclick="showScene(3)">Artistic Expression</li>  
-            <li onclick="showScene(4)">Sketches</li>          
+            <li onclick="showScene(4)">Epilogue</li>          
         </ul>
     </nav>
 
