--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ Those deities were painted high and above, overlooking all living beings in sile
                     <h3>Contact Information</h3>
                     <p><strong>Artist:</strong></p>
                     <ul>
+                        <li>Name: Xuewen Zhao</li>
                         <li>Email: <a href="mailto:oxsheron@gmail.com">oxsheron@gmail.com</a></li>
                     </ul>
                     
