--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Those deities were painted high and above, overlooking all living beings in sile
             <div class="scene4card" id="card080">
                 <h1>Myth to Reality: Reflecting on History's Truth</h1>
                 The alternating dark and light curves resemble ribs, or scars. Black is death, white is silence. The curves of the entire painting are crowded together, like a tortuous and endless suffering fate.<br><br>
-                In this way, I add another kind of live feeling to the female deities and let them showcase the real women suffering the war instead of the happiness afterlife tales. Blood surged along the curves I drew, slaps women's bodies, brings oxygen and new lives, and leads endless suffering. Fictional myths can’t save anyone; what is still floating is just memories of suffering. <br><br>
+                In this way, I added another kind of live feeling to the female deities and let them showcase the real women suffering the war instead of the happiness afterlife tales. Blood surged along the curves I drew, slapping women's bodies, bringing oxygen and new life, and leading to endless suffering. Fictional myths can’t save anyone; what is still floating is just memories of suffering. <br><br>
                 Generally, I created this painting to take people's eyes back to the true tragic history from the whitewashed illusory prosperity and legends.
             </div>
               
