--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Those deities were painted high and above, overlooking all living beings in sile
                 The alternating dark and light curves resemble ribs, or scars. Black is death, white is silence. The curves of the entire painting are crowded together, like a tortuous and endless suffering fate.<br><br>
                 In this way, I added another kind of live feeling to the female deities and let them showcase the real women suffering the war instead of the happiness afterlife tales. Blood surged along the curves I drew, slapping women's bodies, bringing oxygen and new life, and leading to endless suffering. Fictional myths can’t save anyone; what is still floating is just memories of suffering. <br><br>
                 Generally, I created this painting to take people's eyes back to the true tragic history from the whitewashed illusory prosperity and legends.<br><br>
-                Time passes, but life stays, and thoughts keep improving; meanwhile, a new history is being written at this very moment.
+                Nevertheless, I also tried to add a hint of hope and life using light colors. Time passes, but life stays, and thoughts keep improving. Finally, there will be a real world without war, not just in the afterlife.
             </div>
               
             <div class="scene4card" id="card090">
