--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p><strong>Artwork Description:</strong><br><br>
                         This is an abstract painting I created named 'The Floating History' inspired by Dunhuang Murals. I first painted it on paper with watercolors, then processed it in Photoshop, after that, I used AI website <I>LeiaPix Converter</I> to animate it into a gif.<br><br>
 I aspired to evoke an art that prompts viewers to first think of the real, profound weight of history, rather than the sense of prosperity depicted by the Dunhuang Murals.<br><br>
-I chose the sleeves in the Dunhuang Murals as a prototype, which are floating and ethereal, and evoke a sense that draws those suffering towards an addiction to the fantasy of a happy afterlife. As a result, instead of those fancy senses created by the original painting, I created a different sensation that is harrowing, depressing, and makes people associate with the organs and blood. Besides that, I also tried to add a hint of hope and life, to make it embellish the tumultuous history.
+I chose the sleeves in the Dunhuang Murals as a prototype, which are floating and ethereal, and evoke a sense that draws those suffering towards an addiction to the fantasy of a happy afterlife. As a result, instead of those fancy senses created by the original painting, I created a different sensation that is harrowing, depressing, and makes people associate with the organs, muscles, and blood. Besides that, I also tried to add a hint of hope and life, to make it embellish the tumultuous history.
                     </p>
                 </div>
         </div>
