--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Abstract Painting</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="non-rotatable">
 
-    <nav class="top-navigation">
-        <ul>
+    <nav class="top-navigation non-rotatable">
+        <ul class="non-rotatable">
             <li onclick="showScene(0)">Home</li>
             <li onclick="showScene(1)">Art Information</li>
             <li onclick="showScene(2)">Backstory</li>
@@ -23,13 +23,14 @@
             <img src="gif/04.gif" alt="Full Screen Image" class="unique-gif">
         </article>
 
-        <article class="scene" id="scene1">
-        <div class="scene1">
+        <article class="scene non-rotatable" id="scene1">
+        <div class="scene1-background non-rotatable"></div>
+        <div class="scene1 non-rotatable">
             <div class="scene1-left">
                 <img src="gif/04.gif" alt="gif1">
             </div>
-            <div class="scene1-right">
-                <div class="box1">
+            <div class="scene1-right non-rotatable">
+                <div class="box1 non-rotatable">
                     <h1>The Floating History: Mixed Media Digital Art Inspired by Dunhuang Murals</h1>
                     <ul>
                         <li><strong>Artist:</strong> Xuewen Zhao</li>
@@ -48,8 +49,9 @@ I chose the sleeves in the Dunhuang Murals as a prototype, which are floating an
         </article>
 
 
-        <article class="scene" id="scene2">
-        <div class="scene2">
+        <article class="scene non-rotatable" id="scene2">
+        <div class="scene2-background non-rotatable"></div>
+        <div class="scene2 non-rotatable">
             <div class="scene2card" id="card010">
                 <h1>Inspiration's Muse</h1>
                 <p>It's an abstract painting with bold colors. The inspiration occurred to me while I was learning about The Dunhuang Murals in ancient China. It made me feel amazed that those sleeves showcased such an ethereal and elegant form on the cold and tough stone and mud walls. They seemed to have a still motion appearance through a thousand years.<br><br>
@@ -74,13 +76,14 @@ Those deities were painted high and above, overlooking all living beings in sile
         </div>
         </article>
 
-        <article class="scene" id="scene3">
-        <div class="scene3">
-            <div class="left-part">
+        <article class="scene non-rotatable" id="scene3">
+        <div class="scene3-background non-rotatable"></div>
+        <div class="scene3 non-rotatable">
+            <div class="left-part non-rotatable">
                 <img src="pic/OAP.jpg" alt="Image 1">
                 <img src="pic/AP.jpg" alt="Image 2">
             </div>
-            <div class="right-part">
+            <div class="right-part non-rotatable">
                 <div class="card" id="card040">
                     <p>
                         <b>Interwoven Sleeves of Past and Present<br><br></b>
@@ -107,8 +110,9 @@ Those deities were painted high and above, overlooking all living beings in sile
         
 
 
-        <article class="scene" id="scene4">
-        <div class="scene4">
+        <article class="scene non-rotatable" id="scene4">
+        <div class="scene4-background non-rotatable"></div>
+        <div class="scene4 non-rotatable">
             <div class="scene4card" id="card070">
                 <img src="pic/285.jpg" alt="Image 1" class="centered-image" />
                 <p><strong>For reference, an example:</strong> <em>Dunhuang Cave No. 285 - 'Fuxi, Nüwa and the Pantheon,'</em> a mural from the Western Wei period. <br><br> As the deities soar through the sky, their sleeves ripple with the wind, creating a tangible impression of '<em>The divine garments flutter as if a breeze has come alive across the mural itself'</em>.</p>
@@ -146,10 +150,10 @@ Those deities were painted high and above, overlooking all living beings in sile
     </div>
 
 
-    <footer class="bottom-navigation">
+    <footer class="bottom-navigation non-rotatable">
     <I>The Floating History: Mixed Media Digital Art Inspired by Dunhuang Murals</I>
     </footer>
-
+    <div id="rotateTarget" style="position: fixed; width: 100px; height: 100px; border-radius: 50%; pointer-events: none; display: none;"></div>
 <script src="script.js"></script>
 </body>
 </html>
