--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="non-rotatable">
-    <img src="pic/firegif.jpg" id="overlayGif" />
+    <img src="pic/firegif.gif" id="overlayGif" />
     <nav class="top-navigation non-rotatable">
         <ul class="non-rotatable">
             <li onclick="showScene(0)">Home</li>
